force-app/main/default/objects/CC_Configuracion_Reclamacion__c/CC_Configuracion_Reclamacion__c.object-meta.xml
<CustomObject>
    <description>Entidad que permite configurar diferentes tipos de reclamaciones automáticas, cada una con sus intervalos de horas, sus plantillas, etc.</description>
    <label>Configuración Reclamación</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuración Reclamaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>