force-app/main/default/objects/CC_Configuracion_Reclamacion__c/fields/CC_2a_Reclamacion_Activa__c.field-meta.xml
<CustomField>
    <fullName>CC_2a_Reclamacion_Activa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que activa la segunda reclamación automática</description>
    <label>2ª Rec. Activa</label>
    <type>Checkbox</type>
</CustomField>