force-app/main/default/objects/CC_Configuracion_Reclamacion__c/fields/CC_Email_Cliente_2a_Rec__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Cliente_2a_Rec__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que indica si se debe enviar un email al cliente al enviar la segunda reclamación</description>
    <label>Email a cliente 2ª Rec.</label>
    <type>Checkbox</type>
</CustomField>