force-app/main/default/objects/CC_Configuracion_Reclamacion__c/fields/CC_Email_Cliente_4a_Rec__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Cliente_4a_Rec__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que indica si se debe enviar un email al cliente al enviar la cuarta reclamación</description>
    <label>Email a Cliente 4ª Rec.</label>
    <type>Checkbox</type>
</CustomField>