force-app/main/default/objects/CC_Configuracion_Reclamacion__c/fields/CC_Fecha_Activacion_1a_Rec__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Activacion_1a_Rec__c</fullName>
    <description>Fecha desde la cual se enviará automáticamente la primera reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Activación 1ª Rec.</label>
    <type>DateTime</type>
</CustomField>