force-app/main/default/objects/CC_Configuracion_Reclamacion__c/fields/CC_Fecha_Desactivacion_2a_Rec__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Desactivacion_2a_Rec__c</fullName>
    <description>Fecha desde la cual se desactiva el envío automático de la segunda reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Desactivación 2ª Rec.</label>
    <type>DateTime</type>
</CustomField>