force-app/main/default/objects/CC_Configuracion_Reclamacion__c/fields/CC_Horas_3a_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Horas_3a_Reclamacion__c</fullName>
    <description>Número de horas que deben pasar para que se envíe la tercera reclamación</description>
    <label>Horas 3ª Rec.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Horas</valueSetName>
    </valueSet>
</CustomField>