force-app/main/default/objects/CC_Configuracion_Reclamacion__c/fields/CC_Nombre_Plantilla_1_Rec_Colab_Cast__c.field-meta.xml
<CustomField>
    <fullName>CC_Nombre_Plantilla_1_Rec_Colab_Cast__c</fullName>
    <description>Guarda el nombre de la plantilla de la 1ª Reclamación para Traslado a Colaborador</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla 1ª Reclamación Colab. Cast.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>