force-app/main/default/objects/CC_Configuracion_Reclamacion__c/fields/CC_Nombre_Plantilla_2_Rec_Colab_Cat__c.field-meta.xml
<CustomField>
    <fullName>CC_Nombre_Plantilla_2_Rec_Colab_Cat__c</fullName>
    <description>Guarda el nombre de la plantilla de la 2ª Reclamación para Traslado a Colaborador (català)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla 2ª Reclamación Colab. Català</label>
    <length>255</length>
    <type>Text</type>
</CustomField>