force-app/main/default/objects/CC_Configuracion_Reclamacion__c/fields/CC_Plantilla_1_Rec_Colab_Cat__c.field-meta.xml
<CustomField>
    <fullName>CC_Plantilla_1_Rec_Colab_Cat__c</fullName>
    <description>Guarda el DeveloperName del registro de EmailTemplate asociado (català)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DN Plantilla 1ª Rec. Colab. Català</label>
    <length>255</length>
    <type>Text</type>
</CustomField>