force-app/main/default/objects/CC_Configuracion_Reclamacion__c/fields/CC_Plantilla_3_Rec_Colab_Cast__c.field-meta.xml
<CustomField>
    <fullName>CC_Plantilla_3_Rec_Colab_Cast__c</fullName>
    <description>Guarda el DeveloperName del registro de EmailTemplate asociado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DN Plantilla 3ª Rec. Colab. Cast.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>