force-app/main/default/objects/CC_Configuracion_Reclamacion__c/fields/OS_Fecha_Desactivacion_Fin_Rec__c.field-meta.xml
<CustomField>
    <fullName>OS_Fecha_Desactivacion_Fin_Rec__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Desactivación Fin Rec.</label>
    <type>DateTime</type>
</CustomField>