force-app/main/default/objects/CC_Configuracion_Reclamacion__c/fields/OS_Horas_Fin_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>OS_Horas_Fin_Reclamacion__c</fullName>
    <label>Horas Fin Rec.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>168</fullName>
                <label>168 (7 dias)</label>
            </value>
            <value>
                <fullName>336</fullName>
                <label>336 (14 dias)</label>
            </value>
            <value>
                <fullName>504</fullName>
                <label>504 (21 dias)</label>
            </value>
            <value>
                <fullName>720</fullName>
                <label>720 (30 dias)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>