force-app/main/default/objects/CC_Configuracion_Reclamacion__c/fields/OS_Negocio__c.field-meta.xml
<CustomField>
    <fullName>OS_Negocio__c</fullName>
    <label>Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
                <default>true</default>
                <label>CC</label>
            </value>
            <value>
                <fullName>COPS</fullName>
            </value>
            <value>
                <fullName>CSI_Bankia</fullName>
            </value>
            <value>
                <fullName>GRR</fullName>
            </value>
            <value>
                <fullName>HDT</fullName>
            </value>
            <value>
                <fullName>SACH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>