force-app/main/default/objects/CC_Configuracion_Reclamacion__c/validationRules/Asignacion_multiple_COPS.validationRule-meta.xml
<ValidationRule>
    <fullName>Asignacion_multiple_COPS</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(OS_Negocio__c , &apos;COPS&apos;),
OR(OS_Asignar_Propietario__c == TRUE,
OS_Asignar_Usuario__c != NULL),
OR(OS_Asignar_Propietario__c == TRUE,
OS_Asignar_GrupoTrabajo__c!= NULL),
OR(OS_Asignar_Usuario__c != NULL,
OS_Asignar_GrupoTrabajo__c != NULL)
)</errorConditionFormula>
    <errorMessage>No está permitido informar &apos;Asignar Propietario&apos;, &apos;Asignar Usuario&apos; y &apos;Asignar Grupo de Trabajo&apos; al mismo tiempo.</errorMessage>
</ValidationRule>