force-app/main/default/objects/CC_Configuracion_Reclamacion__c/listViews/Configuraci_n_Reclamaciones_COPS.listView-meta.xml
<ListView>
    <fullName>Configuraci_n_Reclamaciones_COPS</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OS_Negocio__c</field>
        <operation>equals</operation>
        <value>COPS</value>
    </filters>
    <label>Configuración Reclamaciones COPS</label>
    <sharedTo>
        <group>OS_Responsables</group>
    </sharedTo>
</ListView>